<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/actions"
        >
<!--        <Preference android:title="@string/apperance_settings"-->
<!--            android:icon="@drawable/ic_color_wheel"-->
<!--            android:summary="@string/apperance_summary"-->
<!--            android:key="@string/ApperanceKey" />-->



<!--        <Preference android:title="@string/sound_settings"-->
<!--            android:icon="@drawable/ic_sound_waves"-->
<!--            android:key="@string/soundKey" />-->

        <ListPreference
            android:icon="@drawable/ic_programmer"
            android:title="@string/language_settings"
            android:key="@string/language_key"
            android:entries="@array/Language_entries"
            android:entryValues="@array/Language_value"
            android:defaultValue="@string/default_language"
            android:summary="@string/auto" />


    </PreferenceCategory>


    <PreferenceCategory
        android:icon="@drawable/ic_locked"
        android:title="@string/law_settings"
        tools:visibility="visible">

        <Preference
            android:key="@string/privacyPolicyKey"
            android:title="@string/privacy_settings"
            tools:visibility="visible" />
        <Preference
            android:key="@string/termsOfUseKey"
            android:title="@string/terms_settings"
            tools:visibility="visible" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_settings">

        <Preference
            android:key="@string/feedback"
            android:title="@string/mail_settings"
            android:summary="@string/mail_summary"
            android:icon="@drawable/ic_baseline_mail_24" />

        <Preference
            android:key="@string/rate_key"
            android:title="@string/rate_settings"
            android:icon="@drawable/ic_star__1_" />

        <Preference
            android:key="@string/share_key"
            android:title="@string/share_settings"
            android:icon="@drawable/ic_share__2_" />

        <Preference
            android:key="@string/MoreApps"
            android:title="@string/website_settings"
            android:icon="@drawable/ic_web" />

<!--        <Preference-->
<!--            android:title="رقم الإصدار"-->
<!--            android:summary="1.0"-->
<!--            android:selectable="false" />-->

    </PreferenceCategory>


    <!--    <PreferenceCategory android:title="تابعنا">-->
<!--        <Preference android:title="فيس بوك" android:icon="@drawable/ic_facebook"-->
<!--            android:key="@string/facebook"-->
<!--            />-->
<!--        <Preference android:title="تويتر" android:icon="@drawable/ic_twitter"-->
<!--            android:key="@string/Twitter"-->
<!--            />-->
<!--        <Preference android:title="انستجرام" android:icon="@drawable/ic_instagram_sketched"-->
<!--            android:key="@string/Instagram"-->
<!--            />-->
<!--        <Preference android:title="يوتيوب" android:icon="@drawable/ic_youtube__1_"-->
<!--            android:key="@string/Youtube"-->
<!--            />-->
<!--    </PreferenceCategory>-->
</PreferenceScreen>