<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item android:icon="@drawable/ic_baseline_search_24"-->
<!--        android:id="@+id/search"-->
<!--        android:title="@string/search_menu"-->
<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"-->
<!--        app:showAsAction="always|collapseActionView"-->
<!--        tools:ignore="AlwaysShowAction" />-->

    <item android:icon="@drawable/ic_baseline_delete_24_toolbar"
        android:id="@+id/deleteAllPlaylist"
        android:title="@string/delete_menu"
        app:showAsAction="always|collapseActionView" />

    <item android:icon="@drawable/ic_baseline_grid_on_24"
        android:id="@+id/gridOrList"
        android:title="@string/grid_list_menu"
        app:showAsAction="always|collapseActionView" />

<!--    <item android:id="@+id/refresh"-->
<!--        android:title="@string/refresh_menu"-->
<!--        android:icon="@drawable/ic_baseline_refresh_24"-->
<!--        app:showAsAction="never"/>-->

    <item android:id="@+id/url"
        android:title="@string/open_url_header"
        android:icon="@drawable/ic_baseline_wifi_24"
        app:showAsAction="never"/>


<!--    <item android:id="@+id/polish"-->
<!--        android:title="@string/apperance_settings"-->
<!--        android:icon="@drawable/ic_baseline_imagesearch_roller_24"-->
<!--        app:showAsAction="never"/>-->


    <item android:id="@+id/sound_edit"
        android:title="@string/sound_settings"
        android:icon="@drawable/ic_baseline_surround_sound_24"
        app:showAsAction="never"/>



<item android:id="@+id/settings"
    android:title="@string/settings_header"
    android:icon="@drawable/ic_baseline_settings_24"
    app:showAsAction="never"/>


</menu>