<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/add_playlist_view">

    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/MediaFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic"
        android:lines="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingBottom="28dp"
        android:textColor="?attr/bottomSheetTextHeaderColor"
        android:textSize="17sp"/>


    <TextView
        android:id="@+id/playMediaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:lines="1"
        android:minHeight="48dp"
        android:text="@string/play"
        android:textColor="?attr/bottomSheetTextColor"
        app:drawableStartCompat="@drawable/ic_play__1_" />

    <TextView
        android:id="@+id/AddToFavourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:lines="1"
        android:minHeight="48dp"
        android:text="@string/add_to_favourite"
        android:textColor="?attr/bottomSheetTextColor"
        app:drawableStartCompat="@drawable/ic_baseline_favorite_24" />

    <TextView
        android:id="@+id/shareMediaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:lines="1"
        android:minHeight="48dp"
        android:text="@string/share_header"
        android:textColor="?attr/bottomSheetTextColor"
        app:drawableStartCompat="@drawable/ic_baseline_share_24" />
</LinearLayout>